# rust-bin-starter

./: .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml
src/: main.rs
