[package]
name = "{{crate_name}}"
version = "0.0.1"
edition = "2021"
authors = ["{{authors}}"]
description = ""
license = "MIT"  # https://spdx.org/licenses/
keywords = []  # free text
categories = []  # https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
{% if crate_type == "bin" %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}"
{% endif %}
[dependencies]
